[tool.poetry]
name = "st-test"
version = "0.1.0"
description = ""
authors = ["AkbarLutfullah <akbar.lutfullah@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.12.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
